--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
-  "name": "Tapping Feet Dance And Fitness Studio",
+  "name": "Tapping Feet Dance And Fitness Center",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@fontsource/kaushan-script": "^4.5.2",
     "@fontsource/sirin-stencil": "^4.5.2",
+    "@fortawesome/free-brands-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@mui/material": "^6.1.3",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
@@ -17,7 +23,7 @@
     "react-locomotive-scroll": "^0.2.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
-    "styled-components": "^5.3.3",
+    "styled-components": "^5.3.11",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
